force-app/main/default/objects/Shop__c/fields/Director_Field__c.field-meta.xml
<CustomField>
    <fullName>Director_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director Field</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Shops</relationshipLabel>
    <relationshipName>Shops</relationshipName>
    <type>Lookup</type>
</CustomField>