force-app/main/default/objects/Shop__c/validationRules/Director_Field.validationRule-meta.xml
<ValidationRule>
    <fullName>Director_Field</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( Director_Field__c )  = 0</errorConditionFormula>
    <errorDisplayField>Director_Field__c</errorDisplayField>
    <errorMessage>Need enter the director name</errorMessage>
</ValidationRule>