force-app/main/default/objects/Shop__c/validationRules/Monthly_Revenue.validationRule-meta.xml
<ValidationRule>
    <fullName>Monthly_Revenue</fullName>
    <active>true</active>
    <errorConditionFormula>Monthly_Revenue__c  &lt;= 0</errorConditionFormula>
    <errorDisplayField>Monthly_Revenue__c</errorDisplayField>
    <errorMessage>Must be positive value</errorMessage>
</ValidationRule>